# derpbot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  derp.py  fags.py  images.py  requirements.txt  schedule.toml  schedule.toml.example  setup.cfg  setup.py  slack-manifest.yaml
derp/: bot.py  command_loader.py  deps.py  scheduler.py
derp/backends/: slack.py  xmpp.py
derp/command/: dispatcher.py  factory.py  finder.py  handler.py  loader.py  parser.py  responder.py  response.py  runner.py  scheduler.py
derp/commands/: __init__.py  bomb.py  calc.py  fortune.py  images.py  larry.py  list.py  prom.py  test.py  textsynth.py  twitter.py
derp/fortunes/: bart  comic  computer  fortune  ralph  seinfeld  ubuntu-server-tips  vimtips
derp/message/: processor.py  queue.py  responder.py
tests/: test_calc.py
tests/command/: test_finder.py  test_parser.py
tests/commands/: test_calc.py  test_image_command.py
