[metadata]
name = derpbot
version = attr: derp.__version__
author = David Vincelli
author_email = david.vincelli@gmail.com
description = "A Slack Bot with a pluggable command architecture"
long_description = file: README.md
long_description_content_type = text/markdown
keywords = slack, chat, bot
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
install_requires = file:requirements.txt

[options.entry_points]
console_scripts =
    derpbot = derp.bot:main
